--- a/TODO App/index.html
+++ b/TODO App/index.html
@@ -13,6 +13,11 @@
         <h1>Todo App</h1>
         <input type="text" id="toDoInput" placeholder="Write your next Todo here">
         <button id="addTodo">Add Todo</button>
+        <div>
+            <button class="filterBtn" data-filter="all">All</button>
+            <button class="filterBtn" data-filter="completed">Completed</button>
+            <button class="filterBtn" data-filter="pending">Pending</button>
+        </div>
         <ul id="todolist"></ul>
     </div>
 
