--- a/News_Articles/index.html
+++ b/News_Articles/index.html
@@ -7,14 +7,15 @@
 </head>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News App</title>
+    <title>News Articles</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
     <div id="app">
         <header>
             <span class="menu-btn" id="menu-btn">☰</span>
-            <span>News App</span>
+            <span>News Articles</span>
             <nav id="nav-bar" class="nav-bar"></nav>
             <button id="toggle-mode" class="toggle-btn">🌞</button>
         </header>
@@ -32,6 +33,7 @@
         <main id="news-container" class="news-container"></main>
         <div id="error" class="error hidden">Failed to load news. Please try again</div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
